# linux-mcp-agent

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.devcontainer/: Containerfile  devcontainer.json  setup.sh
.github/: copilot-instructions.md
.github/workflows/: push.yaml
linux_mcp_agent/: __init__.py  __main__.py  agent.py  config.py  model.py
tests/: test_agent.py  test_config.py  test_config_validation.py
