[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-linux-agent"
version = "0.1.0"
description = "A Python project using LlamaIndex"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "rich==14.3.2",
    "llama-index-core>=0.10.0"
    "llama-index-llms-ollama==0.9.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
