[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-linux-agent"
version = "0.1.0"
description = "A Python project using LlamaIndex"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rich==14.3.2",
    "llama-index==0.14.13",
    "llama-index-llms-ollama==0.9.1",
    "llama-index-tools-mcp>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "types-requests==2.32.4.20260107",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
